--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Ashutosh Rathor</p>
+                <p>ashutoshrathor272@gmail.com </p>
               </div>
 
               <div class="phone">
